--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Etch-a-Sketch</title>
+    <script src="game.js" defer></script>
+    <link href="styles.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+  </body>
 </html>
