Added button to select grid size.
Button prompts user to input grid size and validates answer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
+    <button>Set Grid Size</button>
     <div class="container"></div>
   </body>
 </html>
